--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@mui/icons-material": "^5.4.2",
     "@mui/styles": "^5.4.2",
     "react-router-dom": "^6.2.1"
   }
